--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ report_json.json
 report_md.md
 report_html.html
 zap.yaml
+# Terraform (repo-local)
+infra/terraform/.terraform/
+infra/terraform/*.tfstate
+infra/terraform/*.tfstate.*
+infra/terraform/terraform.tfvars
+infra/terraform/*.auto.tfvars
