--- a/release-please-config.json
+++ b/release-please-config.json
@@ -9,7 +9,7 @@
         "README.md"
       ],
       "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": true
+      "bump-patch-for-minor-pre-major": false
     }
   }
 }
