--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM node:20-bullseye-slim AS builder
+FROM node:20-bullseye-slim AS BUILDER
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3 \
@@ -28,7 +28,7 @@ RUN pnpm build
 RUN pnpm prune --prod
 
 
-FROM node:20-bullseye-slim AS runner
+FROM node:20-bullseye-slim AS RUNNER
 
 WORKDIR /app/apps/web
 
