feat(realtime): add Redis pub/sub backplane for WebSocket
- Add Redis pub/sub broadcast for multi-instance support
- Add REDIS_PUBSUB_ENABLED config toggle
- Fallback to in-memory when Redis unavailable
- Add test coverage for WebSocket backplane

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -20,6 +20,9 @@ JWT_SECRET_PREVIOUS=
 # Token expiry in hours
 JWT_EXPIRES_HOURS=4
 
+# Cookie SameSite policy: lax, strict, or none (none requires HTTPS)
+COOKIE_SAMESITE=lax
+
 # =============================================================================
 # Google OAuth
 # =============================================================================
@@ -213,3 +216,13 @@ RESEND_API_KEY=
 # If not set, falls back to in-memory rate limiting (single worker only)
 # Format: redis://localhost:6379/0
 REDIS_URL=
+
+# =============================================================================
+# WORKER / CAMPAIGNS
+# =============================================================================
+# Restrict a worker to specific job types (comma-separated)
+WORKER_JOB_TYPES=
+# Batch size for campaign sends
+CAMPAIGN_SEND_BATCH_SIZE=200
+# Instance id for websocket backplane (optional)
+WEBSOCKET_INSTANCE_ID=
