--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -4,9 +4,14 @@
 # ============================================================================
 # Stage 1: Build dependencies
 # ============================================================================
+FROM ghcr.io/astral-sh/uv:0.9.24 as uv
+
 FROM python:3.11-slim as builder
 
 WORKDIR /app
+
+# Install uv
+COPY --from=uv /uv /usr/local/bin/uv
 
 # Install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -14,14 +19,13 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Create virtual environment
-RUN python -m venv /opt/venv
+# Create virtual environment via uv
+ENV UV_PROJECT_ENVIRONMENT=/opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 
 # Install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+COPY pyproject.toml uv.lock ./
+RUN uv sync --frozen --no-install-project
 
 
 # ============================================================================
