--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -258,6 +258,13 @@ jobs:
             -c zap-baseline.conf \
             -r zap-report.html \
             -I || true
+
+      - name: Stop API server
+        if: always()
+        run: |
+          if [ -f /tmp/uvicorn.pid ]; then
+            kill "$(cat /tmp/uvicorn.pid)" || true
+          fi
       
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
