feat(api): add configurable DB connection pooling and Redis client
Database pooling:
- Add create_engine_with_settings() in session.py with pool config support
- New env vars: DB_POOL_SIZE, DB_MAX_OVERFLOW, DB_POOL_TIMEOUT,
  DB_POOL_RECYCLE, DB_POOL_PRE_PING

Redis client:
- Add redis_client.py with sync/async connection pooling
- Configurable REDIS_MAX_CONNECTIONS with sensible defaults
- Connection timeout and health check settings

Rate limiting:
- Add RATE_LIMIT_FAIL_OPEN for graceful degradation when Redis unavailable

WebSocket:
- Refactor to use async Redis client
- Improved connection lifecycle management

Includes new tests for redis_client and db_pooling modules.

Infrastructure (Terraform):
- redis.tf: Add auth_enabled with lifecycle ignore
- network.tf: Add VPC access configuration
- apis.tf: New file for required API enablement
- Clean up variables.tf and locals.tf
- Update terraform.tfvars.example and README

Documentation:
- Update deployment.md, terraform.md with new config options
- Update .env.example with new environment variables

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -7,6 +7,12 @@ ENV=dev
 # Database
 # =============================================================================
 DATABASE_URL=postgresql+psycopg://postgres:postgres@localhost:5432/crm
+# DB pool tuning (defaults match SQLAlchemy)
+# DB_POOL_SIZE=5
+# DB_MAX_OVERFLOW=10
+# DB_POOL_TIMEOUT=30
+# DB_POOL_RECYCLE=-1
+# DB_POOL_PRE_PING=true
 
 # =============================================================================
 # Session Token (JWT in HTTP-only cookie)
@@ -171,6 +177,7 @@ GCP_ERROR_REPORTING_SAMPLE_RATE=1.0
 # RATE_LIMIT_API=60       # General API
 # RATE_LIMIT_SEARCH=30    # Global search
 # RATE_LIMIT_PUBLIC_FORMS=10  # Public form submissions
+# RATE_LIMIT_FAIL_OPEN=true  # Use in-memory limiter if Redis is unavailable (set false to fail closed)
 
 # =============================================================================
 # ANALYTICS CACHE
@@ -214,8 +221,10 @@ RESEND_API_KEY=
 # =============================================================================
 # Redis URL for distributed rate limiting across multiple workers
 # If not set, falls back to in-memory rate limiting (single worker only)
-# Format: redis://localhost:6379/0
+# Format: redis://:<password>@localhost:6379/0
 REDIS_URL=
+# Optional connection pool cap
+# REDIS_MAX_CONNECTIONS=20
 
 # =============================================================================
 # WORKER / CAMPAIGNS
