feat(infra): add monitoring alerts, billing budgets, and weekly cost reports
Monitoring alerts (monitoring.tf):
- Cloud SQL CPU/memory/disk utilization alerts (>70-80% for 15m)
- Redis memory usage alert (>80% for 15m)
- Cloud Run 5xx spike detection (>5 in 5m)

Billing budget (budget.tf):
- Configurable monthly budget with threshold alerts
- Integrates with notification channels

Weekly billing summary (billing-weekly.tf):
- BigQuery dataset for billing export
- Cloud Run job to query weekly spend
- Cloud Scheduler for weekly cron execution
- Slack webhook integration for cost notifications

Supporting changes:
- billing-iam.tf: Service account for billing reports
- apis.tf: Enable required GCP APIs
- variables.tf/locals.tf: New config variables
- secrets.tf: Billing Slack webhook secret
- Updated docs and tfvars.example

--- a/infra/terraform/terraform.tfvars.example
+++ b/infra/terraform/terraform.tfvars.example
@@ -16,6 +16,19 @@ enable_cloudbuild_triggers = true
 enable_public_invoker = true
 enable_domain_mapping = true
 
+# Monitoring + budgets (recommended)
+# alert_notification_channel_ids = ["projects/PROJECT_ID/notificationChannels/CHANNEL_ID"]
+# billing_account_id = "000000-000000-000000"
+# billing_budget_amount_usd = 300
+# billing_budget_thresholds = [0.5, 0.75, 0.9, 1.0]
+
+# Weekly billing summary (optional)
+# billing_weekly_summary_enabled = true
+# billing_export_dataset = "billing_export"
+# billing_export_dataset_location = "US"
+# billing_weekly_summary_cron = "0 13 * * 1"
+# billing_weekly_summary_timezone = "Etc/UTC"
+
 # Storage hardening (optional)
 # manage_storage_buckets = true
 # storage_bucket_location = "us-central1"
