fix(infra): improve startup probe and Cloud Build trigger configuration
- Update health check endpoint to /health/live in Dockerfile
- Add lenient startup probe settings for cold start reliability
- Fix Cloud Build trigger branch regex and location
- Add .gcloud/ to gitignore to protect credentials

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ report_json.json
 report_md.md
 report_html.html
 zap.yaml
+
+# Local gcloud config/credentials (never commit)
+.gcloud/
 # Terraform (repo-local)
 infra/terraform/.terraform/
 infra/terraform/*.tfstate
