--- a/cloudbuild/api.yaml
+++ b/cloudbuild/api.yaml
@@ -10,7 +10,8 @@ steps:
 images:
   - "$_IMAGE_API"
 options:
-  logging: GCS_ONLY
+  # BYOSA (build.service_account) requires Cloud Logging or an explicit logs bucket.
+  logging: CLOUD_LOGGING_ONLY
 substitutions:
   _REGION: "us-central1"
   _API_SERVICE: "crm-api"
