--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -35,11 +35,12 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts",
     "**/*.mts"
   ],
   "exclude": [
     "node_modules",
+    ".next/dev",
+    ".next/types/validator.ts",
     "tests",
     "vitest.config.ts"
   ]
