feat: add health probes and monitoring webhook infrastructure
- Add startup_probe and liveness_probe to Cloud Run web service
- Add ops_webhook notification channel for GCP monitoring alerts
- Add alert_notification_channels local for centralized channel management
- Update monitoring.tf with webhook channel configuration
- Update cloudrun.tf with health probe configurations
- Update API monitoring router and tests

--- a/infra/terraform/terraform.tfvars.example
+++ b/infra/terraform/terraform.tfvars.example
@@ -30,6 +30,7 @@ enable_domain_mapping = true
 
 # Monitoring + budgets (recommended)
 # alert_notification_channel_ids = ["projects/PROJECT_ID/notificationChannels/CHANNEL_ID"]
+# monitoring_webhook_token = "replace-me"
 # billing_account_id = "000000-000000-000000"
 # billing_budget_amount_usd = 300
 # billing_budget_thresholds = [0.5, 0.75, 0.9, 1.0]
