chore: update Docker files to match test requirements
- .dockerignore: add .git and common exclusions (.env, __pycache__, etc)
- API Dockerfile: pin to python:3.11.14-slim-bookworm in both stages
- Web Dockerfile: pin to node:20.20.0-bullseye-slim, optimize cache,
  add non-root user (node), add healthcheck for /health
- docker-compose.yml: update to postgres:18.1

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,4 @@
+.git
 **/node_modules
 **/.pnpm-store
 **/.next
@@ -5,3 +6,11 @@
 **/coverage
 **/.turbo
 **/.cache
+**/.env
+**/.env.*
+**/__pycache__
+**/*.pyc
+**/.pytest_cache
+**/.mypy_cache
+**/.ruff_cache
+**/.venv
