--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM node:20-bullseye-slim AS builder
+FROM node:20.20.0-bullseye-slim AS builder
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3 \
@@ -11,11 +11,10 @@ WORKDIR /app
 
 RUN corepack enable && corepack prepare pnpm@9.12.1 --activate
 
-# Copy only what is needed for build (context should be repo root)
-COPY apps/web ./apps/web
-COPY apps/api ./apps/api
-COPY scripts ./scripts
+# Copy package files first for better cache utilization
+COPY apps/web/package.json apps/web/pnpm-lock.yaml ./apps/web/
 
+# Install dependencies before copying source
 WORKDIR /app/apps/web
 
 ENV NPM_CONFIG_OPTIONAL=true
@@ -25,6 +24,14 @@ ENV PNPM_CONFIG_OPTIONAL=true
 RUN rm -rf node_modules
 RUN pnpm install --frozen-lockfile --config.optional=true
 
+# Now copy remaining source files
+WORKDIR /app
+COPY apps/web ./apps/web
+COPY apps/api ./apps/api
+COPY scripts ./scripts
+
+WORKDIR /app/apps/web
+
 ARG NEXT_PUBLIC_API_BASE_URL
 ENV NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
 ENV NEXT_TELEMETRY_DISABLED=1
@@ -33,19 +40,28 @@ RUN pnpm build
 RUN pnpm prune --prod
 
 
-FROM node:20-bullseye-slim AS runner
+FROM node:20.20.0-bullseye-slim AS runner
 
 WORKDIR /app/apps/web
 
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
 
-COPY --from=builder /app/apps/web/.next ./.next
-COPY --from=builder /app/apps/web/public ./public
-COPY --from=builder /app/apps/web/package.json ./package.json
-COPY --from=builder /app/apps/web/next.config.js ./next.config.js
-COPY --from=builder /app/apps/web/node_modules ./node_modules
+# Create non-root user for security
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
+
+COPY --from=builder --chown=nextjs:nodejs /app/apps/web/.next ./.next
+COPY --from=builder --chown=nextjs:nodejs /app/apps/web/public ./public
+COPY --from=builder --chown=nextjs:nodejs /app/apps/web/package.json ./package.json
+COPY --from=builder --chown=nextjs:nodejs /app/apps/web/next.config.js ./next.config.js
+COPY --from=builder --chown=nextjs:nodejs /app/apps/web/node_modules ./node_modules
+
+USER node
 
 EXPOSE 3000
+
+HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
+    CMD curl -f http://localhost:3000/health || exit 1
 
 CMD ["node_modules/.bin/next", "start", "-p", "3000"]
