--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -57,11 +57,11 @@ COPY --from=builder --chown=nextjs:nodejs /app/apps/web/package.json ./package.j
 COPY --from=builder --chown=nextjs:nodejs /app/apps/web/next.config.js ./next.config.js
 COPY --from=builder --chown=nextjs:nodejs /app/apps/web/node_modules ./node_modules
 
-USER node
+USER nextjs
 
 EXPOSE 3000
 
-HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
-    CMD curl -f http://localhost:3000/health || exit 1
+HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
+    CMD node -e "require('http').get('http://localhost:3000/health', res => { if (res.statusCode !== 200) process.exit(1) }).on('error', () => process.exit(1))"
 
 CMD ["node_modules/.bin/next", "start", "-p", "3000"]
