chore: add ruff and uv cache directories to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ infra/terraform/terraform.tfvars
 infra/terraform/*.auto.tfvars
 infra/terraform/tfplan
 .secrets.env
+
+# Tool caches
+.ruff_cache/
+.uv_cache/
+.uv-cache/
