chore: update config, imports, and tests

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -71,6 +71,17 @@ ZOOM_WEBHOOK_SECRET=  # Webhook verification token from Zoom app settings (for m
 # Gmail integration OAuth (separate from Google Login OAuth)
 GMAIL_REDIRECT_URI=http://localhost:8000/integrations/gmail/callback
 GOOGLE_CALENDAR_REDIRECT_URI=http://localhost:8000/integrations/google-calendar/callback
+GCP_REDIRECT_URI=http://localhost:8000/integrations/gcp/callback
+
+# =============================================================================
+# Workload Identity Federation (OIDC for Vertex AI)
+# =============================================================================
+# Public issuer URL used by GCP WIF provider (defaults to API_BASE_URL in dev/test)
+WIF_OIDC_ISSUER=
+# PEM-encoded RSA private key used to sign WIF subject tokens
+WIF_OIDC_PRIVATE_KEY=
+# Optional key ID (kid) for JWKS rotation
+WIF_OIDC_KEY_ID=
 
 # =============================================================================
 # Domain Restriction (optional)
