feat: add Meta OAuth infrastructure for Facebook Login for Business
- Add MetaOAuthConnection model with encrypted token storage
- Add meta_oauth_service for OAuth flow (code exchange, token refresh, scope validation)
- Add meta_token_service for centralized token management
- Add /meta/oauth router with callback and connection management endpoints
- Add migration for meta_oauth_connections table
- Add frontend API client and hooks for OAuth flow
- Add META_OAUTH_REDIRECT_URI config
- Add implementation checklist docs
- Add comprehensive test coverage

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -259,8 +259,12 @@ RESEND_API_KEY=
 # If not set, falls back to in-memory rate limiting (single worker only)
 # Format: redis://:<password>@localhost:6379/0
 REDIS_URL=
+# Require Redis for readiness (fail closed if unavailable)
+# REDIS_REQUIRED=false
 # Optional connection pool cap
 # REDIS_MAX_CONNECTIONS=20
+# Seconds to keep in-memory rate limit after Redis errors
+# RATE_LIMIT_REDIS_FALLBACK_SECONDS=30
 
 # =============================================================================
 # WORKER / CAMPAIGNS
