perf(web): lazy-load report charts and ops rich text editor (review finding #6)
- Use next/dynamic to lazy-load recharts dashboard components
- Lazy-load RichTextEditor in ops agency detail page
- Add skeleton fallbacks for loading states
- Extract report components to separate files
- Update review0128.md with FIXED status for #6
- Add test coverage for lazy-loaded components

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,9 @@
     "start": "next start",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:integration": "vitest run --config vitest.integration.config.ts",
+    "test": "NODE_OPTIONS=--localstorage-file=/tmp/vitest-localstorage vitest run",
+    "test:watch": "NODE_OPTIONS=--localstorage-file=/tmp/vitest-localstorage vitest",
+    "test:integration": "NODE_OPTIONS=--localstorage-file=/tmp/vitest-localstorage vitest run --config vitest.integration.config.ts",
     "test:all": "pnpm run test && pnpm run test:integration",
     "check": "pnpm run typecheck && pnpm run lint && pnpm run test",
     "analyze": "next experimental-analyze"
