chore: miscellaneous updates and cleanups
- Update audit and jobs enums
- Update main.py router registrations
- Update platform and surrogates_email routers
- Improve admin_import_service and match_service
- Update worker job types
- Update automation pages
- Update docs and database optimization notes
- Remove obsolete case-questionnaire-import-export-plan
- Update test fixtures and expectations

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -101,6 +101,8 @@ CORS_ORIGINS=http://localhost:3000
 # =============================================================================
 # Used for safe post-login redirects
 FRONTEND_URL=http://localhost:3000
+# Unsubscribe token TTL (days)
+UNSUBSCRIBE_TOKEN_TTL_DAYS=365
 
 # Ops console (platform admin)
 OPS_FRONTEND_URL=http://localhost:3000
