--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "httpx==0.28.1",
     "pyjwt==2.10.1",
     "google-auth==2.47.0",
+    "google-genai==1.58.0",
     "requests==2.32.5",
     "email-validator==2.3.0",
 
