--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,14 +27,14 @@
     "@fullcalendar/timegrid": "^6.1.20",
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.20",
-    "@tiptap/extension-link": "^3.17.1",
-    "@tiptap/extension-placeholder": "^3.17.1",
-    "@tiptap/extension-underline": "^3.17.1",
-    "@tiptap/react": "^3.17.1",
-    "@tiptap/starter-kit": "^3.17.1",
+    "@tiptap/extension-link": "^3.18.0",
+    "@tiptap/extension-placeholder": "^3.18.0",
+    "@tiptap/extension-underline": "^3.18.0",
+    "@tiptap/react": "^3.18.0",
+    "@tiptap/starter-kit": "^3.18.0",
     "@types/d3-scale": "^4.0.9",
     "@types/react-simple-maps": "^3.0.6",
-    "autoprefixer": "^10.4.23",
+    "autoprefixer": "^10.4.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
@@ -44,15 +44,15 @@
     "embla-carousel-react": "8.6.0",
     "html-to-image": "^1.11.13",
     "input-otp": "1.4.2",
-    "lucide-react": "^0.562.0",
-    "next": "16.1.5",
+    "lucide-react": "^0.563.0",
+    "next": "16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.4",
     "react-day-picker": "9.13.0",
     "react-dom": "19.2.4",
-    "react-dropzone": "^14.3.8",
+    "react-dropzone": "^14.4.0",
     "react-hook-form": "^7.71.1",
-    "react-resizable-panels": "^4.5.2",
+    "react-resizable-panels": "^4.5.6",
     "react-simple-maps": "^3.0.0",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7",
@@ -63,11 +63,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
-    "@next/bundle-analyzer": "16.1.5",
+    "@next/bundle-analyzer": "16.1.6",
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
-    "@types/node": "^25.0.10",
+    "@types/node": "^25.1.0",
     "@types/react": "19.2.9",
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
@@ -88,6 +88,20 @@
       "@types/react": "19.2.9",
       "@types/react-dom": "19.2.3",
       "d3-color": ">=3.1.0"
+    },
+    "packageExtensions": {
+      "react-simple-maps@*": {
+        "peerDependencies": {
+          "react": "^16.8.0 || 17.x || 18.x || 19.x",
+          "react-dom": "^16.8.0 || 17.x || 18.x || 19.x"
+        }
+      }
+    },
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "react": "19.x",
+        "react-dom": "19.x"
+      }
     },
     "onlyBuiltDependencies": [
       "esbuild",
