feat: integrate ClamAV scanning for attachments and worker signatures
- Added ClamAV to API and Worker Dockerfiles
- Implemented ClamAV signature sync service with GCS/S3 caching
- Created background scan jobs for both general attachments and form files
- Refined quarantine semantics: files are now available during scan but blocked if 'infected' or 'error'
- Added comprehensive scanning tests and updated infra configuration hooks

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -269,9 +269,20 @@ REDIS_URL=
 # RATE_LIMIT_REDIS_FALLBACK_SECONDS=30
 
 # =============================================================================
+# FILE UPLOADS / MALWARE SCANNING
+# =============================================================================
+# Enable ClamAV scanning for file uploads
+ATTACHMENT_SCAN_ENABLED=true
+# Optional: share ClamAV signatures via S3-compatible storage
+CLAMAV_SIGNATURES_BUCKET=
+CLAMAV_SIGNATURES_PREFIX=clamav
+CLAMAV_SIGNATURES_MAX_AGE_HOURS=72
+
+# =============================================================================
 # WORKER / CAMPAIGNS
 # =============================================================================
 # Restrict a worker to specific job types (comma-separated)
+# Include form_submission_file_scan to scan form uploads
 WORKER_JOB_TYPES=
 # Batch size for campaign sends
 CAMPAIGN_SEND_BATCH_SIZE=200
