--- a/apps/api/Dockerfile.worker
+++ b/apps/api/Dockerfile.worker
@@ -1,5 +1,4 @@
-# Production Dockerfile for Surrogacy Force API
-# Multi-stage build for smaller final image
+# Worker Dockerfile for Surrogacy Force API (background jobs)
 
 # ============================================================================
 # Stage 1: Build dependencies
@@ -29,7 +28,7 @@ RUN uv sync --frozen --no-install-project
 
 
 # ============================================================================
-# Stage 2: Production image
+# Stage 2: Worker image
 # ============================================================================
 FROM python:3.11.14-slim-bookworm
 
@@ -39,19 +38,20 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq5 \
     curl \
+    clamav \
+    clamav-freshclam \
     && rm -rf /var/lib/apt/lists/*
+
+# Create non-root user
+RUN useradd --create-home --shell /bin/bash appuser
+
+# Ensure ClamAV signature dirs are writable
+RUN mkdir -p /var/lib/clamav /var/log/clamav && \
+    chown -R appuser:appuser /var/lib/clamav /var/log/clamav
 
 # Copy virtual environment from builder
 COPY --from=builder /opt/venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
-ENV PLAYWRIGHT_BROWSERS_PATH=/opt/playwright
-
-# Install Playwright browser binaries (required for PDF export)
-RUN python -m playwright install --with-deps chromium && \
-    chmod -R 755 /opt/playwright
-
-# Create non-root user
-RUN useradd --create-home --shell /bin/bash appuser
 
 # Copy application code
 COPY --chown=appuser:appuser . .
@@ -64,12 +64,5 @@ ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV ENV=production
 
-# Expose port
-EXPOSE 8000
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/health/live || exit 1
-
-# Run with uvicorn
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
+# Run worker
+CMD ["python", "-m", "app.worker"]
