--- a/cloudbuild/api.yaml
+++ b/cloudbuild/api.yaml
@@ -3,6 +3,10 @@ steps:
     args: ["build", "-t", "$_IMAGE_API", "apps/api"]
   - name: gcr.io/cloud-builders/docker
     args: ["push", "$_IMAGE_API"]
+  - name: gcr.io/cloud-builders/docker
+    args: ["build", "-f", "apps/api/Dockerfile.worker", "-t", "$_IMAGE_WORKER", "apps/api"]
+  - name: gcr.io/cloud-builders/docker
+    args: ["push", "$_IMAGE_WORKER"]
   - name: gcr.io/cloud-builders/gcloud
     args: ["run", "jobs", "update", "$_MIGRATE_JOB", "--image", "$_IMAGE_API", "--region", "$_REGION", "--quiet"]
   - name: gcr.io/cloud-builders/gcloud
@@ -10,9 +14,12 @@ steps:
   - name: gcr.io/cloud-builders/gcloud
     args: ["run", "services", "update", "$_API_SERVICE", "--image", "$_IMAGE_API", "--region", "$_REGION", "--quiet"]
   - name: gcr.io/cloud-builders/gcloud
-    args: ["run", "jobs", "update", "$_WORKER_JOB", "--image", "$_IMAGE_API", "--region", "$_REGION", "--quiet"]
+    args: ["run", "jobs", "update", "$_WORKER_JOB", "--image", "$_IMAGE_WORKER", "--region", "$_REGION", "--quiet"]
+  - name: gcr.io/cloud-builders/gcloud
+    args: ["run", "jobs", "update", "$_CLAMAV_UPDATE_JOB", "--image", "$_IMAGE_WORKER", "--region", "$_REGION", "--quiet"]
 images:
   - "$_IMAGE_API"
+  - "$_IMAGE_WORKER"
 options:
   # BYOSA (build.service_account) requires Cloud Logging or an explicit logs bucket.
   logging: CLOUD_LOGGING_ONLY
@@ -22,3 +29,5 @@ substitutions:
   _WORKER_JOB: "crm-worker"
   _MIGRATE_JOB: "crm-migrate"
   _IMAGE_API: "us-central1-docker.pkg.dev/probable-dream-484923-n7/crm/api:latest"
+  _IMAGE_WORKER: "us-central1-docker.pkg.dev/probable-dream-484923-n7/crm/worker:latest"
+  _CLAMAV_UPDATE_JOB: "crm-clamav-update"
