feat(security): add download-only mode for ClamAV signatures and improve update reliability

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -276,7 +276,9 @@ ATTACHMENT_SCAN_ENABLED=true
 # Optional: share ClamAV signatures via S3-compatible storage
 CLAMAV_SIGNATURES_BUCKET=
 CLAMAV_SIGNATURES_PREFIX=clamav
-CLAMAV_SIGNATURES_MAX_AGE_HOURS=72
+CLAMAV_SIGNATURES_MAX_AGE_HOURS=168
+# If true, only download signatures from storage; never run freshclam in the worker
+CLAMAV_SIGNATURES_DOWNLOAD_ONLY=true
 
 # =============================================================================
 # WORKER / CAMPAIGNS
