--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -54,6 +54,7 @@
     "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^4.5.6",
     "react-simple-maps": "^3.0.0",
+    "qrcode.react": "^3.1.0",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
