chore: migrate worker from Cloud Run Job to Service with auto-scaling
- Convert worker to a FastAPI-based service for health checks and better reliability
- Implement Cloud Scheduler based auto-scaling for business hours
- Update Terraform and Cloud Build to support worker service deployment
- Add resource configuration variables and documentation for the new worker architecture

--- a/apps/api/Dockerfile.worker
+++ b/apps/api/Dockerfile.worker
@@ -64,5 +64,5 @@ ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV ENV=production
 
-# Run worker
-CMD ["python", "-m", "app.worker"]
+# Run worker service
+CMD ["python", "-m", "app.worker_service"]
