--- a/cloudbuild/api.yaml
+++ b/cloudbuild/api.yaml
@@ -14,7 +14,7 @@ steps:
   - name: gcr.io/cloud-builders/gcloud
     args: ["run", "services", "update", "$_API_SERVICE", "--image", "$_IMAGE_API", "--region", "$_REGION", "--quiet"]
   - name: gcr.io/cloud-builders/gcloud
-    args: ["run", "jobs", "update", "$_WORKER_JOB", "--image", "$_IMAGE_WORKER", "--region", "$_REGION", "--quiet"]
+    args: ["run", "services", "update", "$_WORKER_SERVICE", "--image", "$_IMAGE_WORKER", "--region", "$_REGION", "--quiet"]
   - name: gcr.io/cloud-builders/gcloud
     args: ["run", "jobs", "update", "$_CLAMAV_UPDATE_JOB", "--image", "$_IMAGE_WORKER", "--region", "$_REGION", "--quiet"]
 images:
@@ -26,7 +26,7 @@ options:
 substitutions:
   _REGION: "us-central1"
   _API_SERVICE: "crm-api"
-  _WORKER_JOB: "crm-worker"
+  _WORKER_SERVICE: "crm-worker"
   _MIGRATE_JOB: "crm-migrate"
   _IMAGE_API: "us-central1-docker.pkg.dev/probable-dream-484923-n7/crm/api:latest"
   _IMAGE_WORKER: "us-central1-docker.pkg.dev/probable-dream-484923-n7/crm/worker:latest"
