build: implement CACHE_BUST and optimize Cloud Build caching
- Add CACHE_BUST build-arg to Dockerfiles for API, Worker, and Web.
- Configure Cloud Build to use BUILDKIT_INLINE_CACHE and --cache-from.
- Add documentation on force-triggering fresh builds in post-deployment.md.

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -8,6 +8,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
+ARG CACHE_BUST=0
+RUN echo "cache_bust=${CACHE_BUST}" > /dev/null
 
 RUN corepack enable && corepack prepare pnpm@9.12.1 --activate
 
