chore(api): refine app versioning and RELEASE_PLEASE support
- Detect version from .release-please-version.json as a fallback.
- Update FALLBACK_APP_VERSION to 0.54.0.
- Enhance version detection tests.

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -11,6 +11,7 @@
       ],
       "extra-files": [
         "apps/api/app/core/config.py",
+        "apps/api/.release-please-version.json",
         "README.md"
       ],
       "bump-minor-pre-major": true,
