--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.20",
     "@tiptap/extension-link": "^3.18.0",
+    "@tiptap/extension-image": "^3.18.0",
     "@tiptap/extension-placeholder": "^3.18.0",
     "@tiptap/extension-text-align": "^3.18.0",
     "@tiptap/extension-underline": "^3.18.0",
