chore: minor fixes and improvements
- Suppress _UnionGenericAlias deprecation warning in pytest.ini
- Fix surrogate age range from 18-42 to 21-36 in seed data and UI
- Fix Zapier dialog scroll behavior (use fixed height with overflow)
- Update dialog test mocks to pass className prop

--- a/apps/api/pytest.ini
+++ b/apps/api/pytest.ini
@@ -2,6 +2,8 @@
 pythonpath = .
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
+filterwarnings =
+    ignore:.*_UnionGenericAlias.*:DeprecationWarning
 env =
     D:ENV=test
     D:PII_HASH_KEY=test-pii-hash-key-please-change
