--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,6 +4,7 @@
       "release-type": "simple",
       "package-name": "surrogacy-crm-platform",
       "changelog-path": "CHANGELOG.md",
+      "versioning-strategy": "always-bump-minor",
       "changelog-sections": [
         { "type": "feat", "section": "Features" },
         { "type": "fix", "section": "Bug Fixes" },
