--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -90,7 +90,8 @@
     "overrides": {
       "@types/react": "19.2.10",
       "@types/react-dom": "19.2.3",
-      "d3-color": ">=3.1.0"
+      "d3-color": ">=3.1.0",
+      "minimatch": "10.2.1"
     },
     "packageExtensions": {
       "react-simple-maps@*": {
