--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,8 +27,8 @@
     "@fullcalendar/timegrid": "^6.1.20",
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.20",
-    "@tiptap/extension-link": "^3.18.0",
     "@tiptap/extension-image": "^3.18.0",
+    "@tiptap/extension-link": "^3.18.0",
     "@tiptap/extension-placeholder": "^3.18.0",
     "@tiptap/extension-text-align": "^3.18.0",
     "@tiptap/extension-underline": "^3.18.0",
@@ -44,11 +44,13 @@
     "date-fns": "4.1.0",
     "dompurify": "^3.3.1",
     "embla-carousel-react": "8.6.0",
+    "emoji-picker-react": "^4.18.0",
     "html-to-image": "^1.11.13",
     "input-otp": "1.4.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^3.1.0",
     "react": "19.2.4",
     "react-day-picker": "9.13.0",
     "react-dom": "19.2.4",
@@ -56,7 +58,6 @@
     "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^4.5.6",
     "react-simple-maps": "^3.0.0",
-    "qrcode.react": "^3.1.0",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
