fix: restore immediate Google sync in async workers

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -286,6 +286,11 @@ CLAMAV_SIGNATURES_DOWNLOAD_ONLY=true
 # Restrict a worker to specific job types (comma-separated)
 # Include form_submission_file_scan to scan form uploads
 WORKER_JOB_TYPES=
+# Enable fallback Google Calendar/Tasks sync scheduling from the worker loop.
+# Keeps sync running if /internal/scheduled/google-calendar-sync cron is not configured.
+GOOGLE_CALENDAR_SYNC_FALLBACK_ENABLED=true
+# Interval (seconds) for fallback scheduling checks.
+GOOGLE_CALENDAR_SYNC_FALLBACK_INTERVAL_SECONDS=300
 # Batch size for campaign sends
 CAMPAIGN_SEND_BATCH_SIZE=200
 # Instance id for websocket backplane (optional)
