feat(api-gmail): add Gmail push watch config and webhook wiring

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -70,6 +70,13 @@ ZOOM_WEBHOOK_SECRET=  # Webhook verification token from Zoom app settings (for m
 
 # Gmail integration OAuth (separate from Google Login OAuth)
 GMAIL_REDIRECT_URI=http://localhost:8000/integrations/gmail/callback
+# Gmail push notifications (users.watch -> Cloud Pub/Sub)
+# Format: projects/{project-id}/topics/{topic-name}
+GMAIL_PUSH_TOPIC=
+# Optional comma-separated label IDs for watch filtering (example: INBOX,SENT)
+GMAIL_PUSH_LABEL_IDS=
+# Optional query token for /webhooks/google-gmail (configure same token on Pub/Sub push URL)
+GMAIL_PUSH_WEBHOOK_TOKEN=
 GOOGLE_CALENDAR_REDIRECT_URI=http://localhost:8000/integrations/google-calendar/callback
 GCP_REDIRECT_URI=http://localhost:8000/integrations/gcp/callback
 
@@ -291,6 +298,11 @@ WORKER_JOB_TYPES=
 GOOGLE_CALENDAR_SYNC_FALLBACK_ENABLED=true
 # Interval (seconds) for fallback scheduling checks.
 GOOGLE_CALENDAR_SYNC_FALLBACK_INTERVAL_SECONDS=300
+# Enable fallback Gmail mailbox sync scheduling from the worker loop.
+# Keeps ticketing inbox ingestion running when /internal/scheduled/gmail-sync cron is not configured.
+GMAIL_SYNC_FALLBACK_ENABLED=true
+# Interval (seconds) for Gmail fallback scheduling checks.
+GMAIL_SYNC_FALLBACK_INTERVAL_SECONDS=60
 # Batch size for campaign sends
 CAMPAIGN_SEND_BATCH_SIZE=200
 # Instance id for websocket backplane (optional)
