--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,61 @@ jobs:
         working-directory: apps/api
         run: PYTHONPATH=. uv run -m pytest tests/ -v --tb=short
 
+  ticketing-launch-gate:
+    name: Ticketing Launch Gate
+    runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: crm_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U postgres -d crm_test"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    env:
+      DATABASE_URL: postgresql+psycopg://postgres:postgres@localhost:5432/crm_test
+      JWT_SECRET: test-jwt-secret-0123456789abcdef
+      PII_HASH_KEY: ${{ secrets.PII_HASH_KEY || 'test-pii-hash-key-please-change' }}
+      DEV_BYPASS_AUTH: "False"
+      ENV: test
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v5
+
+      - name: Install dependencies
+        working-directory: apps/api
+        run: uv sync --frozen --extra test
+
+      - name: Run migrations
+        working-directory: apps/api
+        run: uv run -m alembic upgrade head
+
+      - name: Run ticketing launch gate tests
+        working-directory: apps/api
+        run: |
+          PYTHONPATH=. uv run -m pytest -v --tb=short \
+            tests/test_ticketing_api.py \
+            tests/test_ticketing_outbound_jobs.py \
+            tests/test_case_email.py \
+            tests/test_surrogates_email_attachments.py \
+            tests/test_compliance.py
+
   frontend-tests:
     name: Frontend Tests
     runs-on: ubuntu-latest
